crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@path_selector_mixed_chain.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
expression: snapshot.to_string()
---
fired_rules: none
output: [r]
pattern:
  bindings: 4 [a, b, c, r]
  join_tree: All(Scan(a)->Expand(_->b)->Repeat(r->c;1..2))
  pattern_filters: 0
  scans:
    - a (Node): Linear residual=0 consumed=0
    - <anonymous-edge> (Edge): Linear residual=0 consumed=0
    - r (Edge): Linear residual=0 consumed=0
  order_access: []
pipeline:
  - Project(columns=[r])
