crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@path_selector_pure_node.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
expression: snapshot.to_string()
---
fired_rules: none
output: [n]
pattern:
  bindings: 1 [n]
  join_tree: All(Scan(n))
  pattern_filters: 0
  scans:
    - n (Node): Linear residual=0 consumed=0
  order_access: []
pipeline:
  - Project(columns=[n])
