crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@pipeline_call_extends_scope.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
expression: snapshot.to_string()
---
fired_rules: none
output: [n, outA]
pattern:
  bindings: 1 [n]
  join_tree: Scan(n)
  pattern_filters: 0
  scans:
    - n (Node): Linear residual=0 consumed=0
  order_access: []
pipeline:
  - Call(name=pkg.all, args=0, yield=[outA])
