crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@predicate_reorder_selectivity.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
expression: snapshot.to_string()
---
fired_rules: and_splitting, filter_pushdown, node_filter_extraction, predicate_reorder
output: [n]
pattern:
  bindings: 1 [n]
  join_tree: Scan(n)
  pattern_filters: 0
  scans:
    - n (Node): Linear residual=2 consumed=0
  order_access: []
pipeline:
  - Project(columns=[n])
