crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@read_chain.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
expression: snapshot.to_string()
---
fired_rules: none
output: [b]
pattern: none
pipeline:
  - Project(columns=[a])
  - Chain(rhs=pipeline=[Project], output=[b], pattern=none)
