crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@read_let_unwind_distinct.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
expression: snapshot.to_string()
---
fired_rules: none
output: [y]
pattern: none
pipeline:
  - Unwind(alias=x, source=binding_refs=[])
  - Let(bindings=[y])
  - Project(columns=[y])
  - Distinct
